<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OBD</string>
    <string name="speed_dial_desc">速度仪表盘</string>
    <string name="speed_pointer_desc">速度仪表盘指针</string>
    <string name="first_view">登陆界面</string>
    <string name="second_view">仪表盘界面</string>
    <string name="third_view">图标界面</string>
    <string name="forth_view">车辆信息</string>
    <string name="fifth_view">行车习惯</string>
    <string name="average_fuel_consumption">平均油耗</string>
    <string name="odo">总里程</string>
    <string name="total_fuel_consumption">耗油总量</string>
    <string name="average_speed">平均速度</string>
    <string name="highest_water_temperature_of_engine">发动机最高水温</string>
    <string name="voltage_dial_desc">电压仪表盘</string>
    <string name="voltage_dial_pointer_desc">电压仪表盘指针</string>
    <string name="rotate_speed_dial_desc">发动机转速仪表盘</string>
    <string name="rotate_speed_dial_pointer_desc">发动机转速仪表盘指针</string>
    <string name="temperature_dial_desc">温度仪表盘</string>
    <string name="temperature_dial_pointer_desc">温度仪表盘指针</string>
    <string name="pressure_dial_desc">气压仪表盘</string>
    <string name="pressure_dial_pointer_desc">气压仪表盘指针</string>
    <string name="voltage">电瓶电压</string>
    <string name="rotate_speed">发动机转速</string>
    <string name="temperature">冷却液温度</string>
    <string name="pressure">压力数据</string>
    <string name="no_value">--/--</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_empty">请填写用户名</string>
    <string name="password_empty">请填写密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="connection_fail">网络连接失败</string>
    <string name="sign_in">登录</string>
    <string name="title_activity_login">登录</string>

    <string name="car_info">车辆信息</string>
    <string name="car_model">车型</string>
    <string name="licence_plate_number">车牌号</string>
    <string name="owner_name">车主姓名</string>
    <string name="obd_id">OBD设备编号</string>
    <string name="dummy_car_model">宝马730</string>
    <string name="dummy_licence_plate_number">XX XXXXX</string>
    <string name="dummy_owner_name">XXX</string>
    <string name="dummy_obd_id">01234567890123456789</string>

    <string name="car_habit">车辆习惯</string>
    <string name="oil_saving">节油</string>
    <string name="fatigue_control">疲劳控制</string>
    <string name="speed_habit">速度</string>
    <string name="mileage">里程</string>
    <string name="stability">稳定性</string>

    <string name="dummy_oil_saving">33%</string>
    <string name="dummy_fatigue_control">80%</string>
    <string name="dummy_speed_habit">78%</string>
    <string name="dummy_mileage">44%</string>
    <string name="dummy_stability">80%</string>


</resources>